--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -15,16 +15,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openimages in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 1)) (0.0.1)\n",
+      "Requirement already satisfied: ipykernel in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (6.29.2)\n",
+      "Requirement already satisfied: ipython in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 3)) (8.22.1)\n",
+      "Requirement already satisfied: matplotlib in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 4)) (3.8.3)\n",
+      "Requirement already satisfied: pandas in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 5)) (2.2.1)\n",
+      "Requirement already satisfied: torch in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 6)) (2.2.1)\n",
+      "Requirement already satisfied: torchvision in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 7)) (0.17.1)\n",
+      "Requirement already satisfied: mypy in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 8)) (1.8.0)\n",
+      "Requirement already satisfied: pip in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 9)) (24.0)\n",
+      "Requirement already satisfied: types-Pillow in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 10)) (10.2.0.20240213)\n",
+      "Requirement already satisfied: scikit-image in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 11)) (0.22.0)\n",
+      "Requirement already satisfied: seaborn in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 12)) (0.13.2)\n",
+      "Requirement already satisfied: scikit-learn in ./.venv/lib/python3.12/site-packages (from -r requirements.txt (line 13)) (1.4.1.post1)\n",
+      "Requirement already satisfied: boto3 in ./.venv/lib/python3.12/site-packages (from openimages->-r requirements.txt (line 1)) (1.34.49)\n",
+      "Requirement already satisfied: cvdata in ./.venv/lib/python3.12/site-packages (from openimages->-r requirements.txt (line 1)) (0.0.3)\n",
+      "Requirement already satisfied: lxml in ./.venv/lib/python3.12/site-packages (from openimages->-r requirements.txt (line 1)) (5.1.0)\n",
+      "Requirement already satisfied: requests in ./.venv/lib/python3.12/site-packages (from openimages->-r requirements.txt (line 1)) (2.31.0)\n",
+      "Requirement already satisfied: tqdm in ./.venv/lib/python3.12/site-packages (from openimages->-r requirements.txt (line 1)) (4.66.2)\n",
+      "Requirement already satisfied: appnope in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (0.1.4)\n",
+      "Requirement already satisfied: comm>=0.1.1 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (0.2.1)\n",
+      "Requirement already satisfied: debugpy>=1.6.5 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (1.8.1)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.12 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (8.6.0)\n",
+      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (5.7.1)\n",
+      "Requirement already satisfied: matplotlib-inline>=0.1 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (0.1.6)\n",
+      "Requirement already satisfied: nest-asyncio in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (1.6.0)\n",
+      "Requirement already satisfied: packaging in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (23.2)\n",
+      "Requirement already satisfied: psutil in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (5.9.8)\n",
+      "Requirement already satisfied: pyzmq>=24 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (25.1.2)\n",
+      "Requirement already satisfied: tornado>=6.1 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (6.4)\n",
+      "Requirement already satisfied: traitlets>=5.4.0 in ./.venv/lib/python3.12/site-packages (from ipykernel->-r requirements.txt (line 2)) (5.14.1)\n",
+      "Requirement already satisfied: decorator in ./.venv/lib/python3.12/site-packages (from ipython->-r requirements.txt (line 3)) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in ./.venv/lib/python3.12/site-packages (from ipython->-r requirements.txt (line 3)) (0.19.1)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in ./.venv/lib/python3.12/site-packages (from ipython->-r requirements.txt (line 3)) (3.0.43)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in ./.venv/lib/python3.12/site-packages (from ipython->-r requirements.txt (line 3)) (2.17.2)\n",
+      "Requirement already satisfied: stack-data in ./.venv/lib/python3.12/site-packages (from ipython->-r requirements.txt (line 3)) (0.6.3)\n",
+      "Requirement already satisfied: pexpect>4.3 in ./.venv/lib/python3.12/site-packages (from ipython->-r requirements.txt (line 3)) (4.9.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (1.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (4.49.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (1.4.5)\n",
+      "Requirement already satisfied: numpy<2,>=1.21 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (1.26.4)\n",
+      "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (10.2.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (3.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in ./.venv/lib/python3.12/site-packages (from matplotlib->-r requirements.txt (line 4)) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 5)) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 5)) (2024.1)\n",
+      "Requirement already satisfied: filelock in ./.venv/lib/python3.12/site-packages (from torch->-r requirements.txt (line 6)) (3.13.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in ./.venv/lib/python3.12/site-packages (from torch->-r requirements.txt (line 6)) (4.9.0)\n",
+      "Requirement already satisfied: sympy in ./.venv/lib/python3.12/site-packages (from torch->-r requirements.txt (line 6)) (1.12)\n",
+      "Requirement already satisfied: networkx in ./.venv/lib/python3.12/site-packages (from torch->-r requirements.txt (line 6)) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in ./.venv/lib/python3.12/site-packages (from torch->-r requirements.txt (line 6)) (3.1.3)\n",
+      "Requirement already satisfied: fsspec in ./.venv/lib/python3.12/site-packages (from torch->-r requirements.txt (line 6)) (2024.2.0)\n",
+      "Requirement already satisfied: mypy-extensions>=1.0.0 in ./.venv/lib/python3.12/site-packages (from mypy->-r requirements.txt (line 8)) (1.0.0)\n",
+      "Requirement already satisfied: scipy>=1.8 in ./.venv/lib/python3.12/site-packages (from scikit-image->-r requirements.txt (line 11)) (1.12.0)\n",
+      "Requirement already satisfied: imageio>=2.27 in ./.venv/lib/python3.12/site-packages (from scikit-image->-r requirements.txt (line 11)) (2.34.0)\n",
+      "Requirement already satisfied: tifffile>=2022.8.12 in ./.venv/lib/python3.12/site-packages (from scikit-image->-r requirements.txt (line 11)) (2024.2.12)\n",
+      "Requirement already satisfied: lazy_loader>=0.3 in ./.venv/lib/python3.12/site-packages (from scikit-image->-r requirements.txt (line 11)) (0.3)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn->-r requirements.txt (line 13)) (1.3.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn->-r requirements.txt (line 13)) (3.3.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in ./.venv/lib/python3.12/site-packages (from jedi>=0.16->ipython->-r requirements.txt (line 3)) (0.8.3)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in ./.venv/lib/python3.12/site-packages (from jupyter-core!=5.0.*,>=4.12->ipykernel->-r requirements.txt (line 2)) (4.2.0)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in ./.venv/lib/python3.12/site-packages (from pexpect>4.3->ipython->-r requirements.txt (line 3)) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in ./.venv/lib/python3.12/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython->-r requirements.txt (line 3)) (0.2.13)\n",
+      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib->-r requirements.txt (line 4)) (1.16.0)\n",
+      "Requirement already satisfied: botocore<1.35.0,>=1.34.49 in ./.venv/lib/python3.12/site-packages (from boto3->openimages->-r requirements.txt (line 1)) (1.34.49)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in ./.venv/lib/python3.12/site-packages (from boto3->openimages->-r requirements.txt (line 1)) (1.0.1)\n",
+      "Requirement already satisfied: s3transfer<0.11.0,>=0.10.0 in ./.venv/lib/python3.12/site-packages (from boto3->openimages->-r requirements.txt (line 1)) (0.10.0)\n",
+      "Requirement already satisfied: opencv-python in ./.venv/lib/python3.12/site-packages (from cvdata->openimages->-r requirements.txt (line 1)) (4.9.0.80)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in ./.venv/lib/python3.12/site-packages (from jinja2->torch->-r requirements.txt (line 6)) (2.1.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in ./.venv/lib/python3.12/site-packages (from requests->openimages->-r requirements.txt (line 1)) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.12/site-packages (from requests->openimages->-r requirements.txt (line 1)) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.12/site-packages (from requests->openimages->-r requirements.txt (line 1)) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.12/site-packages (from requests->openimages->-r requirements.txt (line 1)) (2024.2.2)\n",
+      "Requirement already satisfied: executing>=1.2.0 in ./.venv/lib/python3.12/site-packages (from stack-data->ipython->-r requirements.txt (line 3)) (2.0.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in ./.venv/lib/python3.12/site-packages (from stack-data->ipython->-r requirements.txt (line 3)) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in ./.venv/lib/python3.12/site-packages (from stack-data->ipython->-r requirements.txt (line 3)) (0.2.2)\n",
+      "Requirement already satisfied: mpmath>=0.19 in ./.venv/lib/python3.12/site-packages (from sympy->torch->-r requirements.txt (line 6)) (1.3.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%python3 -m pip install -r requirements.txt"
+    "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +135,7 @@
        "device(type='mps')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,14 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading: Wheelchair\n",
+      "Downloading: Container\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "               0           1\n",
       "0      /m/011k07    Tortoise\n",
       "1    /m/011q46kg   Container\n",
