--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T00:03:45.447498Z",
-     "start_time": "2024-05-07T00:03:36.803373Z"
+     "end_time": "2024-05-08T00:54:10.203675Z",
+     "start_time": "2024-05-08T00:54:04.675133Z"
     }
    },
    "source": [
+    "import pathlib\n",
     "from importlib import reload\n",
     "import numpy as np\n",
     "import torch\n",
@@ -43,7 +44,7 @@
     "\n",
     "import lab3.util\n",
     "reload(lab3.util)\n",
-    "from lab3.util import seconds_to_time, normalize_masks\n",
+    "from lab3.util import seconds_to_time\n",
     "\n",
     "device"
    ],
@@ -65,15 +66,17 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T00:03:57.818045Z",
-     "start_time": "2024-05-07T00:03:45.448801Z"
+     "end_time": "2024-05-08T00:54:18.226370Z",
+     "start_time": "2024-05-08T00:54:10.204743Z"
     }
    },
    "source": [
+    "import os\n",
     "from typing import Literal\n",
     "import fiftyone as fo\n",
     "import fiftyone.utils.openimages as fouo\n",
     "import fiftyone.zoo as foz\n",
+    "import cv2\n",
     "\n",
     "def download(split = \"train\", max_samples: int = 2000):\n",
     "  return foz.load_zoo_dataset(\n",
@@ -96,6 +99,30 @@
     "\n",
     "  return dataset\n",
     "\n",
+    "def resize_dataset(path):\n",
+    "  for p in os.listdir(path):\n",
+    "    image = cv2.imread(path + p, cv2.IMREAD_UNCHANGED)\n",
+    "    print(image)\n",
+    "    \n",
+    "    if image.shape[1] > image.shape[0]:\n",
+    "      scale = 128 / image.shape[0]\n",
+    "    else:\n",
+    "      scale = 128 / image.shape[1]\n",
+    "    \n",
+    "    width = int(image.shape[1] * scale)\n",
+    "    height = int(image.shape[0] * scale)\n",
+    "    dim = (width, height)\n",
+    "    \n",
+    "    # resize image\n",
+    "    resized = cv2.resize(image, dim, interpolation = cv2.INTER_NEAREST)\n",
+    "    \n",
+    "    print('Resized Dimensions : ',resized.shape)\n",
+    "\n",
+    "RESIZE = False\n",
+    "if RESIZE:\n",
+    "  resize_dataset('./data-lab3/test/data/')\n",
+    "  resize_dataset('./data-lab3/validation/data/')\n",
+    "  resize_dataset('./data-lab3/train/data/')\n",
     "# train_ds = download(\"train\")\n",
     "# valid_ds = download(\"validation\", max_samples = 300)\n",
     "# test_ds  = download(\"test\", max_samples = 300)\n",
@@ -109,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "<fiftyone.utils.openimages.OpenImagesV6DatasetImporter at 0x14d576ff0>"
+       "<fiftyone.utils.openimages.OpenImagesV6DatasetImporter at 0x16819a420>"
       ]
      },
      "execution_count": 2,
@@ -123,8 +150,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T00:05:35.854845Z",
-     "start_time": "2024-05-07T00:03:57.819011Z"
+     "end_time": "2024-05-08T00:55:18.080986Z",
+     "start_time": "2024-05-08T00:54:18.227060Z"
     }
    },
    "source": [
@@ -156,8 +183,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T00:05:35.870280Z",
-     "start_time": "2024-05-07T00:05:35.856822Z"
+     "end_time": "2024-05-08T00:55:18.091374Z",
+     "start_time": "2024-05-08T00:55:18.081592Z"
     }
    },
    "cell_type": "code",
@@ -242,12 +269,13 @@
     "        predictions = model(images)\n",
     "    else:\n",
     "      predictions = model(images)\n",
+    "      \n",
     "\n",
     "    loss = loss_fn(true_masks, predictions)\n",
     "\n",
-    "    true_masks = true_masks > 0.5\n",
+    "    # print(f\"  PRED_MAX: {predictions.max()}\")\n",
     "    predictions = predictions > 0.5\n",
-    "    \n",
+    "    true_masks = true_masks > 0.5\n",
     "    stats.add_data(true_masks.cpu().detach(), predictions.cpu().detach(), loss.cpu().detach().item())\n",
     "    \n",
     "    if IS_TRAIN:\n",
@@ -269,8 +297,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T00:05:35.877682Z",
-     "start_time": "2024-05-07T00:05:35.871927Z"
+     "end_time": "2024-05-08T00:55:18.096747Z",
+     "start_time": "2024-05-08T00:55:18.092985Z"
     }
    },
    "source": [
@@ -334,8 +362,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T00:05:35.881247Z",
-     "start_time": "2024-05-07T00:05:35.879005Z"
+     "end_time": "2024-05-08T00:55:18.099562Z",
+     "start_time": "2024-05-08T00:55:18.097412Z"
     }
    },
    "source": [
@@ -351,20 +379,35 @@
    "execution_count": 6
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-08T00:55:18.101550Z",
+     "start_time": "2024-05-08T00:55:18.100203Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# train_dataset[0]\n",
+    "# np.zeros(4).reshape((2, 2)).shape"
+   ],
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "jupyter": {
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2024-05-07T00:05:35.883117Z"
+     "start_time": "2024-05-08T00:55:18.102194Z"
     }
    },
    "source": [
     "model = Net(train_dataset[0][0].shape[0], num_classes = cs.num_classes).to(device)\n",
     "print(f'Parameter count: {sum(p.numel() for p in model.parameters() if p.requires_grad):,}')\n",
     "\n",
-    "EPOCHS = 30\n",
+    "EPOCHS = 100\n",
     "\n",
     "train_iou, valid_iou, train_dice, valid_dice, train_micro, valid_micro, train_macro, valid_macro, train_loss, valid_loss = train_and_eval(model, train_ld, valid_ld, epoch_count = EPOCHS, learning_rate = 1e-3)\n"
    ],
@@ -373,10 +416,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(128, 128, 6)\n",
-      "torch.Size([6, 128, 128])\n",
       "Parameter count: 1,928,582\n",
-      "EPOCH: 1 / 30\n"
+      "EPOCH: 1 / 100\n"
      ]
     },
     {
@@ -384,10 +425,105 @@
      "output_type": "stream",
      "text": [
       "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torchvision/transforms/v2/functional/_deprecated.py:12: UserWarning: The function `to_tensor(...)` is deprecated and will be removed in a future release. Instead, please use `to_image(...)` followed by `to_dtype(..., dtype=torch.float32, scale=True)`.\n",
+      "  warnings.warn(\n",
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1532: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  PRED_MAX: 0.9480430483818054\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1532: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  PRED_MAX: 0.8741291165351868\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1532: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  PRED_MAX: 0.925017774105072\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1532: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  PRED_MAX: 0.9125930070877075\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/domantelio/Projects/gmm/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1532: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n"
      ]
     }
    ],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "iter = train_ld.__iter__()\n",
+    "img: torch.Tensor; mask: torch.Tensor; prediction: torch.Tensor\n",
+    "imgs, masks = next(iter)\n",
+    "\n",
+    "# prediction = model(img.unsqueeze(0).to(device)).cpu().detach().squeeze(0) img.shape, mask.unique(), mask.max()\n",
+    "# for i in range(10):\n",
+    "#   print(masks[0].max())"
+   ],
+   "outputs": [],
    "execution_count": null
   },
   {
